--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FC507AC6"
-    tools:context=".ProfileActivity">
+    tools:context=".activities.ProfileActivity">
 
     <Button
         android:id="@+id/btnProfileSignOut"
