--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,19 +8,33 @@
     android:background="#3CBDCF"
     tools:context=".activities.LoginActivity">
 
-    <EditText
-        android:id="@+id/etLoginEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="101dp"
-        android:layout_marginTop="188dp"
-        android:layout_marginEnd="101dp"
-        android:ems="10"
-        android:hint="Email"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <include
+        android:id="@+id/fragmentForgotPassword"
+        layout="@layout/fragment_forgot_password"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/loginLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#3CBDCF">
+
+        <EditText
+            android:id="@+id/etLoginEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="101dp"
+            android:layout_marginTop="188dp"
+            android:layout_marginEnd="101dp"
+            android:ems="10"
+            android:hint="@string/email"
+            android:inputType="textEmailAddress"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etLoginPassword"
@@ -29,7 +44,7 @@
         android:layout_marginTop="14dp"
         android:layout_marginEnd="101dp"
         android:ems="10"
-        android:hint="Password"
+        android:hint="@string/password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="88dp"
         android:layout_marginTop="20dp"
-        android:text="Don't Have An Account?"
+        android:text="@string/don_t_have_an_account"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLoginForgotPassword" />
 
@@ -53,7 +68,7 @@
         android:layout_marginTop="37dp"
         android:layout_marginEnd="162dp"
         android:background="#ACA9A0"
-        android:text="LOGIN"
+        android:text="@string/login"
         android:textAllCaps="true"
         android:textColor="#F6F6F6"
         app:layout_constraintEnd_toEndOf="parent"
@@ -67,7 +82,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="21dp"
         android:layout_marginEnd="72dp"
-        android:text="Sign Up"
+        android:text="@string/sign_up"
         android:textColor="#38569F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -81,10 +96,11 @@
         android:layout_marginStart="177dp"
         android:layout_marginTop="23dp"
         android:layout_marginEnd="177dp"
-        android:text="Forgot Password?"
+        android:text="@string/forgot_password"
         android:textColor="#38569F"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnLogin" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
