--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -16,10 +16,8 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:title="Campaigns"
-
-            />
+            android:background="@color/colorAccent"
+            app:title="Home" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
