--- a/app/src/main/res/layout/fragment_edit_profile.xml
+++ b/app/src/main/res/layout/fragment_edit_profile.xml
@@ -6,69 +6,105 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.EditProfileFragment">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilEditProfileName"
-        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/tilEditProfilePhoneNum"
-        android:layout_centerInParent="true"
-        app:errorEnabled="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etEditProfileName"
-            android:layout_width="match_parent"
-            android:textColor="@color/cardview_shadow_start_color"
+        <TextView
+            android:id="@+id/tvEditProfileText"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:hint="Name" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_above="@id/tilEditProfileName"
+            android:layout_centerHorizontal="true"
+            android:text="Edit Profile"
+            android:textSize="34sp"
+            android:textStyle="bold" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilEditProfilePhoneNum"
-        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        app:errorEnabled="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etEditProfilePhoneNum"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilEditProfileName"
+            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
             android:layout_width="match_parent"
-            android:textColor="@color/cardview_shadow_start_color"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:hint="Phone Number" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_above="@+id/tilEditProfilePhoneNum"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            app:errorEnabled="true">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/tilEditProfileCity"
-        style="@style/Theme.MaterialComponents.Light.DarkActionBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tilEditProfilePhoneNum"
-        android:layout_centerInParent="true"
-        app:errorEnabled="true"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp">
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEditProfileName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Name"
+                android:textColor="@color/cardview_shadow_start_color"
+                android:textSize="12sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etEditProfileCity"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilEditProfilePhoneNum"
+            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
             android:layout_width="match_parent"
-            android:textColor="@color/cardview_shadow_start_color"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
-            android:hint="City" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_above="@+id/tilEditProfileCity"
+            android:layout_centerHorizontal="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:errorEnabled="true">
 
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEditProfilePhoneNum"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Phone Number"
+                android:textColor="@color/cardview_shadow_start_color"
+                android:textSize="12sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-</RelativeLayout>
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tilEditProfileCity"
+            style="@style/Theme.MaterialComponents.Light.DarkActionBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            app:errorEnabled="true">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEditProfileCity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="City"
+                android:textColor="@color/cardview_shadow_start_color"
+                android:textSize="12sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <androidx.appcompat.widget.AppCompatSpinner
+            android:id="@+id/spnEditProfileBloodGroup"
+            android:background="@color/colorAccent"
+            android:layout_width="169dp"
+            android:layout_height="39dp"
+            android:layout_below="@+id/tilEditProfileCity"
+            android:layout_centerHorizontal="true"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp"
+            android:padding="10dp"
+            android:tooltipText="Example: A+">
+
+        </androidx.appcompat.widget.AppCompatSpinner>
+
+        <Button
+            android:id="@+id/btnEditProfileConfirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/spnEditProfileBloodGroup"
+            android:layout_centerHorizontal="true"
+            android:backgroundTint="@color/colorAccent"
+            android:textColor="@color/cardview_light_background"
+            android:textSize="14sp"
+            android:layout_marginTop="70dp"
+            android:text="Confirm" />
+
+    </RelativeLayout>
 </FrameLayout>
