--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -14,14 +14,14 @@
     android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/ivMainActivityNavHeaderProfile"
+        android:layout_width="106dp"
+        android:layout_height="88dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@drawable/default_profile_pic" />
 
     <TextView
-        android:id="@+id/tvEmployeeName"
+        android:id="@+id/tvMainActivityNavHeaderName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
@@ -30,7 +30,7 @@
          />
 
     <TextView
-        android:id="@+id/tvEmployeeEmail"
+        android:id="@+id/tvMainActivityNavHeaderEmail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle" />
