--- a/app/src/main/res/layout/fragment_change_password.xml
+++ b/app/src/main/res/layout/fragment_change_password.xml
@@ -55,6 +55,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/etFPConfirmNewPassword"
         android:layout_centerHorizontal="true"
+        android:padding="10dp"
         android:layout_marginTop="30dp"
         android:background="#2C54E6"
         android:text="@string/confirm"
