Spinner Activit Code Error

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#B0B1C8C1"
-    tools:context=".fragments.ForgotPasswordFragment">
+    tools:context=".activities.ChangePasswordActivity">
 
     <TextView
-        android:id="@+id/tvFPChangePassword"
+        android:id="@+id/tvCPChangePassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/etFPCurrentPassword"
+        android:layout_above="@+id/etCPCurrentPassword"
         android:layout_centerHorizontal="true"
         android:text="@string/change_password"
         android:textAllCaps="true"
@@ -18,10 +18,10 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/etFPCurrentPassword"
+        android:id="@+id/etCPCurrentPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/etFPNewPassword"
+        android:layout_above="@+id/etCPNewPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="75dp"
         android:ems="10"
@@ -29,7 +29,7 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/etFPNewPassword"
+        android:id="@+id/etCPNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
@@ -39,10 +39,10 @@
         android:inputType="textPassword" />
 
     <EditText
-        android:id="@+id/etFPConfirmNewPassword"
+        android:id="@+id/etCPConfirmNewPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etFPNewPassword"
+        android:layout_below="@+id/etCPNewPassword"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
         android:ems="10"
@@ -50,10 +50,10 @@
         android:inputType="textPassword" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnCPConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/etFPConfirmNewPassword"
+        android:layout_below="@+id/etCPConfirmNewPassword"
         android:layout_centerHorizontal="true"
         android:padding="10dp"
         android:layout_marginTop="30dp"
